fix issue on safari

--- a/source/css/_partial/jumbotron.scss
+++ b/source/css/_partial/jumbotron.scss
@@ -25,6 +25,7 @@
         min-width: 1250px;
         height: 130%;
         top: 0;
+        left: 0;
         overflow: hidden;
         // transition: all .218s;
         iframe {
